Fixed text-wrap in button

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
   display: inline-block;
   background-color: var(--first-color);
   color: #1a1a1a;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 1.3rem;
   border-radius: 3rem;
   font-weight: var(--font-semi-bold);
   transition: 0.3s;
